update and delete products, top clients
