# src/main/resources/api.yml
@@ -55,6 +55,7 @@ paths:
           description: The id of the client to retrieve
           schema:
             type: string
+            format: uuid
       responses:
         '200':
           description: Expected response to a valid request
@@ -84,6 +85,37 @@ paths:
       responses:
         '202':
           description: Accepted
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /clients/top:
+    get:
+      summary: List top clients
+      operationId: listTopClients
+      parameters:
+        - name: limit
+          in: query
+          required: true
+          description: The limit of top client to retrieve
+          schema:
+            type: integer
+        - name: from
+          in: query
+          required: true
+          description: Date from which clients loyalty points are taken into consideration
+          schema:
+            type: string
+            format: date
+      responses:
+        '200':
+          description: An array of clients
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Clients"
         default:
           description: unexpected error
           content:
@@ -140,6 +172,7 @@ paths:
           description: The id of the appointment to retrieve
           schema:
             type: string
+            format: uuid
       responses:
         '200':
           description: Expected response to a valid request
@@ -225,6 +258,7 @@ paths:
           description: The id of the product to retrieve
           schema:
             type: string
+            format: uuid
       responses:
         '200':
           description: Expected response to a valid request
@@ -232,6 +266,56 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Product"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    put:
+      summary: Update a specific product
+      operationId: updateProduct
+      parameters:
+        - name: productId
+          in: path
+          required: true
+          description: The id of the product to update
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Product"
+      responses:
+        '200':
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    delete:
+      summary: Delete a specific product
+      operationId: deleteProduct
+      parameters:
+        - name: productId
+          in: path
+          required: true
+          description: The id of the product to delete
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Expected response to a valid request
         default:
           description: unexpected error
           content:
@@ -361,8 +445,8 @@ components:
           format: double
         loyaltyPoints:
           type: integer
-        type:
-          $ref: "#/components/schemas/Product"
+        productType:
+          $ref: "#/components/schemas/ProductType"
     Products:
       type: array
       items:
